docs:update data for my shop

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tea Station || Home</title>
+    <title>Jae's coffee art || Home</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -35,8 +35,8 @@
     <!-- header -->
     <header class="header">
       <div class="banner">
-        <h2>Over one hundred flavors of</h2>
-        <h1>specially <br />crafted tea</h1>
+        <h2>Turn your memories into a picture</h2>
+        <h1>Jae's <br />coffee art</h1>
         <a href="skills.html" class="btn banner-btn">explore</a>
       </div>
     </header>
@@ -49,10 +49,8 @@
         <span class="skill-icon">
           <i class="fas fa-mug-hot"></i>
         </span>
-        <h4 class="skill-title">made in HND</h4>
-        <p class="skill-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
-        </p>
+        <h4 class="skill-title">100% Honduras Coffee</h4>
+        <p class="skill-text">Made of ground coffee beans from Honduras.</p>
       </article>
       <!-- end of single skil -->
       <!-- single skil -->
@@ -60,7 +58,7 @@
         <span class="skill-icon">
           <i class="fas fa-glass-cheers"></i>
         </span>
-        <h4 class="skill-title">relaxation</h4>
+        <h4 class="skill-title"></h4>
         <p class="skill-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
         </p>
@@ -97,7 +95,7 @@
         <article class="about-img">
           <div class="about-picture-container">
             <img
-              src="./images/about-bcg.jpeg"
+              src="./images/img4.jpg"
               alt="tea kettle"
               class="about-picture"
             />
@@ -108,7 +106,7 @@
           <!-- section title -->
           <div class="section-title">
             <h3>about our</h3>
-            <h2>tea Station</h2>
+            <h2>coffee art</h2>
           </div>
           <!-- end of section title -->
           <p class="about-text">
@@ -148,34 +146,34 @@
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/product-1.jpeg"
+              src="./images/img9.jpg"
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">ginger peach tea</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-title">Retrats</h4>
+            <h4 class="product-price">$25</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/product-2.jpeg"
+              src="./images/img2.jpg"
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">fruit sangria</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-title">personalize</h4>
+            <h4 class="product-price">$20</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/product-3.jpeg"
+              src="./images/img4.jpg"
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">white tea</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-title">tourist</h4>
+            <h4 class="product-price">$15</h4>
           </div>
           <!-- end of single product -->
         </article>
@@ -208,7 +206,7 @@
           </div>
           <!-- service info -->
           <div class="service-info">
-            <h4>custom recipes</h4>
+            <h4>custom designs</h4>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Architecto sunt rerum inventore suscipit quod! Enim.
@@ -299,7 +297,7 @@
               </span>
               Email
             </h4>
-            <h4 class="contact">email@email.com</h4>
+            <h4 class="contact">astefanyareyes@gmail.com</h4>
           </div>
           <!-- end of contact item -->
           <!-- contact item -->
@@ -310,7 +308,7 @@
               </span>
               telephone
             </h4>
-            <h4 class="contact">+123 456 789</h4>
+            <h4 class="contact">+504 9619-8937</h4>
           </div>
           <!-- end of contact item -->
         </article>
@@ -351,13 +349,16 @@
       <div class="section-center">
         <div class="sosial-icons">
           <!-- social icon -->
-          <a href="#" class="social-icon">
+          <a
+            href="https://www.facebook.com/profile.php?id=100095397826292"
+            class="social-icon"
+          >
             <i class="fab fa-facebook"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="#" class="social-icon">
-            <i class="fab fa-twitter"></i>
+          <a href="https://mail.google.com" class="social-icon">
+            <i class="fas fa-envelope"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
@@ -368,7 +369,7 @@
         </div>
         <h4 class="footer-text">
           &copy;<span id="date">2023 </span
-          ><span class="company">tea station</span> all rights reserved
+          ><span class="company">Jae's coffee art</span> all rights reserved
         </h4>
       </div>
     </footer>
