--- a/index.html
+++ b/index.html
@@ -49,41 +49,35 @@
         <span class="skill-icon">
           <i class="fas fa-mug-hot"></i>
         </span>
-        <h4 class="skill-title">100% Honduras Coffee</h4>
-        <p class="skill-text">Made of ground coffee beans from Honduras.</p>
+        <h4 class="skill-title">Quality</h4>
+        <p class="skill-text">Art made of 100% honduran coffee.</p>
       </article>
       <!-- end of single skil -->
       <!-- single skil -->
       <article class="skill">
         <span class="skill-icon">
-          <i class="fas fa-glass-cheers"></i>
+          <i class="fas fa-palette"></i>
         </span>
-        <h4 class="skill-title"></h4>
-        <p class="skill-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
-        </p>
+        <h4 class="skill-title">Creativity</h4>
+        <p class="skill-text">We turn our customers' ideas into art.</p>
       </article>
       <!-- end of single skil -->
       <!-- single skil -->
       <article class="skill">
         <span class="skill-icon">
-          <i class="fas fa-bomb"></i>
+          <i class="fas fa-money-bill"></i>
         </span>
-        <h4 class="skill-title">energy</h4>
-        <p class="skill-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
-        </p>
+        <h4 class="skill-title">Payment Facility</h4>
+        <p class="skill-text">Diversity of prices and payment facilities.</p>
       </article>
       <!-- end of single skil -->
       <!-- single skil -->
       <article class="skill">
         <span class="skill-icon">
-          <i class="fas fa-mortar-pestle"></i>
+          <i class="fas fa-handshake"></i>
         </span>
-        <h4 class="skill-title">family recipe</h4>
-        <p class="skill-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
-        </p>
+        <h4 class="skill-title">Customer Service</h4>
+        <p class="skill-text">We count with a great customer service.</p>
       </article>
       <!-- end of single skil -->
     </section>
@@ -95,7 +89,7 @@
         <article class="about-img">
           <div class="about-picture-container">
             <img
-              src="./images/img4.jpg"
+              src="./images/img0.jpg"
               alt="tea kettle"
               class="about-picture"
             />
@@ -110,12 +104,14 @@
           </div>
           <!-- end of section title -->
           <p class="about-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae
-            atque fugit blanditiis vel dolorem vitae.
+            We want to maintain our identity as Hondurans and share with others
+            the wonders of our country in a different way. Honduras is known for
+            its beauty, art and culture and within these we cannot forget our
+            coffee. We offer our clients a variety of these four things, turning
+            their memories and ideas into art.
           </p>
           <p class="about-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae
-            atque fugit blanditiis vel dolorem vitae.
+            Working with love, and proudly keeping our essence!
           </p>
           <a href="about.html" class="btn">learn more</a>
         </article>
@@ -134,10 +130,8 @@
           </div>
           <!-- end of section title -->
           <p class="product-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-            consectetur, possimus quam reiciendis fugit assumenda ducimus
-            exercitationem! Iste necessitatibus iusto dicta soluta cupiditate
-            optio architecto?
+            We have a variety of designs, such as portraits, Honduran tourist
+            art and customised art.
           </p>
           <a href="products.html" class="btn">inventory</a>
         </article>
@@ -150,29 +144,29 @@
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">Retrats</h4>
+            <h4 class="product-title">portraits</h4>
             <h4 class="product-price">$25</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/img2.jpg"
+              src="./images/img24.jpg"
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">personalize</h4>
+            <h4 class="product-title">personalize art</h4>
             <h4 class="product-price">$20</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/img4.jpg"
+              src="./images/img11-.jpg"
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">tourist</h4>
+            <h4 class="product-title">Honduran tourist art</h4>
             <h4 class="product-price">$15</h4>
           </div>
           <!-- end of single product -->
@@ -195,21 +189,21 @@
           <div class="service-img-container">
             <!-- img -->
             <img
-              src="./images/product-1.jpeg"
+              src="./images/main.jpg"
               class="service-img"
               alt="single service"
             />
             <!-- services icon -->
             <span class="service-icon">
-              <i class="fas fa-mortar-pestle fa-fw"></i>
+              <i class="fas fa-users"></i>
             </span>
           </div>
           <!-- service info -->
           <div class="service-info">
             <h4>custom designs</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Architecto sunt rerum inventore suscipit quod! Enim.
+              We turn your ideas into art. Personalize and create your own
+              desings with us.
             </p>
             <a href="products.html" class="btn service-btn">read more</a>
           </div>
@@ -221,21 +215,21 @@
           <div class="service-img-container">
             <!-- img -->
             <img
-              src="./images/product-2.jpeg"
+              src="./images/img21.jpg"
               class="service-img"
               alt="single service"
             />
             <!-- services icon -->
             <span class="service-icon">
-              <i class="fas fa-home fa-fw"></i>
+              <i class="fas fa-paint-brush"></i>
             </span>
           </div>
           <!-- service info -->
           <div class="service-info">
-            <h4>Home Delivery</h4>
+            <h4>paintings</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Architecto sunt rerum inventore suscipit quod! Enim.
+              We have a variety of paintings about nature that you can also buy
+              from us.
             </p>
             <a href="products.html" class="btn service-btn">read more</a>
           </div>
@@ -247,21 +241,21 @@
           <div class="service-img-container">
             <!-- img -->
             <img
-              src="./images/product-3.jpeg"
+              src="./images/img28.jpg"
               class="service-img"
               alt="single service"
             />
             <!-- services icon -->
             <span class="service-icon">
-              <i class="fas fa-mug-hot fa-fw"></i>
+              <i class="fas fa-gift"></i>
             </span>
           </div>
           <!-- service info -->
           <div class="service-info">
-            <h4>tea aging</h4>
+            <h4>Gift</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Architecto sunt rerum inventore suscipit quod! Enim.
+              If you are going to give it as a gift, we wrap your picture, and
+              we add a little card .
             </p>
             <a href="products.html" class="btn service-btn">read more</a>
           </div>
@@ -357,7 +351,7 @@
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="https://mail.google.com" class="social-icon">
+          <a href="astefanyareyes@gmail.com" class="social-icon">
             <i class="fas fa-envelope"></i>
           </a>
           <!-- end of icon -->
