--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tea Station || About</title>
+    <title>Jae's Coffee Art|| About</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -35,9 +35,9 @@
     <!-- header -->
     <header class="header">
       <div class="banner">
-        <h2>Over one hundred flavors of</h2>
-        <h1>specially <br />crafted tea</h1>
-        <a href="skills.html" class="btn banner-btn">explore</a>
+        <h2>Turn your memories into a picture</h2>
+        <h1>Jae's<br />Coffe Art</h1>
+        <a href="about.html" class="btn banner-btn">explore</a>
       </div>
     </header>
     <!-- end of header -->
@@ -48,7 +48,7 @@
         <article class="about-img">
           <div class="about-picture-container">
             <img
-              src="./images/about-bcg.jpeg"
+              src="./images/img0.jpg"
               alt="tea kettle"
               class="about-picture"
             />
@@ -59,46 +59,56 @@
           <!-- section title -->
           <div class="section-title">
             <h3>about our</h3>
-            <h2>tea Station</h2>
+            <h2>coffee art</h2>
           </div>
           <!-- end of section title -->
           <p class="about-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae
-            atque fugit blanditiis vel dolorem vitae.
+            We want to maintain our identity as Hondurans and share with others
+            the wonders of our country in a different way. Honduras is known for
+            its beauty, art and culture and within these we cannot forget our
+            coffee. We offer our clients a variety of these four things, turning
+            their memories and ideas into art.
           </p>
           <p class="about-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae
-            atque fugit blanditiis vel dolorem vitae.
+            Working with love, and proudly keeping our essence!
           </p>
           <a href="about.html" class="btn">learn more</a>
         </article>
       </div>
     </section>
     <!-- end of about -->
-
     <!-- footer -->
     <footer class="footer">
       <div class="section-center">
         <div class="sosial-icons">
           <!-- social icon -->
-          <a href="#" class="social-icon">
+          <a
+            href="https://www.facebook.com/profile.php?id=100095397826292"
+            class="social-icon"
+          >
             <i class="fab fa-facebook"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="#" class="social-icon">
-            <i class="fab fa-twitter"></i>
+          <a
+            href="https://www.linkedin.com/in/angelica-stefanya-reyes/"
+            class="social-icon"
+          >
+            <i class="fab fa-linkedin"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="#" class="social-icon">
+          <a
+            href="https://www.instagram.com/stefanya_reyes_diaz/"
+            class="social-icon"
+          >
             <i class="fab fa-instagram"></i>
           </a>
           <!-- end of icon -->
         </div>
         <h4 class="footer-text">
-          &copy;<span id="date">2023 </span
-          ><span class="company">tea station</span> all rights reserved
+          &copy;<span id="date"></span
+          ><span class="company"> Jae's coffee art</span> all rights reserved
         </h4>
       </div>
     </footer>
