--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tea Station || Skills</title>
+    <title>Jae's coffee art || Skills</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -35,8 +35,8 @@
     <!-- header -->
     <header class="header">
       <div class="banner">
-        <h2>Over one hundred flavors of</h2>
-        <h1>specially <br />crafted tea</h1>
+        <h2>Turn your memories into a picture</h2>
+        <h1>Jae's <br />Coffee Art</h1>
         <a href="skills.html" class="btn banner-btn">explore</a>
       </div>
     </header>
@@ -53,10 +53,8 @@
           </div>
           <!-- end of section title -->
           <p class="product-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-            consectetur, possimus quam reiciendis fugit assumenda ducimus
-            exercitationem! Iste necessitatibus iusto dicta soluta cupiditate
-            optio architecto?
+            We have a variety of designs, such as portraits, Honduran tourist
+            art and customised art.
           </p>
           <a href="products.html" class="btn">inventory</a>
         </article>
@@ -65,34 +63,184 @@
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/product-1.jpeg"
+              src="./images/img9.jpg"
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">ginger peach tea</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-title">portraits</h4>
+            <h4 class="product-price">$25</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/product-2.jpeg"
+              src="./images/img24.jpg"
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">fruit sangria</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-title">personalize art</h4>
+            <h4 class="product-price">$20</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/product-3.jpeg"
+              src="./images/img11-.jpg"
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">white tea</h4>
-            <h4 class="product-price">$6.99</h4>
+            <h4 class="product-title">Honduran tourist art</h4>
+            <h4 class="product-price">$15</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/img8.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">Portrait</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/img6.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">Portrait</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/img7.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">Portrait</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/img2.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">Personalize art</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/img3.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">Personalize art</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/img14.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">Personalize art</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/img25.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">Personalize art</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/main.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">motivational phrases</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/img19.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">portrait</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/paint1.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">painting</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/paint4.JPG"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">painting</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/paint3.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">painting</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/paint5.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">painting</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/paint2.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">painting</h4>
+          </div>
+          <!-- end of single product -->
+          <!-- single product -->
+          <div class="product">
+            <img
+              src="./images/paint6.jpg"
+              alt="single product"
+              class="product-img"
+            />
+            <h4 class="product-title">painting</h4>
           </div>
           <!-- end of single product -->
         </article>
@@ -104,24 +252,33 @@
       <div class="section-center">
         <div class="sosial-icons">
           <!-- social icon -->
-          <a href="#" class="social-icon">
+          <a
+            href="https://www.facebook.com/profile.php?id=100095397826292"
+            class="social-icon"
+          >
             <i class="fab fa-facebook"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="#" class="social-icon">
-            <i class="fab fa-twitter"></i>
+          <a
+            href=" https://www.linkedin.com/in/angelica-stefanya-reyes/"
+            class="social-icon"
+          >
+            <i class="fab fa-linkedin"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="#" class="social-icon">
+          <a
+            href="https://www.instagram.com/stefanya_reyes_diaz/"
+            class="social-icon"
+          >
             <i class="fab fa-instagram"></i>
           </a>
           <!-- end of icon -->
         </div>
         <h4 class="footer-text">
-          &copy;<span id="date">2023 </span
-          ><span class="company">tea station</span> all rights reserved
+          &copy;<span id="date"></span
+          ><span class="company"> Jae's Coffee Art</span> all rights reserved
         </h4>
       </div>
     </footer>
