--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tea Station || Skills</title>
+    <title>Jae's Coffe Art || Skills</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -35,56 +35,48 @@
     <!-- header -->
     <header class="header">
       <div class="banner">
-        <h2>Over one hundred flavors of</h2>
-        <h1>specially <br />crafted tea</h1>
+        <h2>Turn your memories into a picture</h2>
+        <h1>Jae's <br />Coffe Art</h1>
         <a href="skills.html" class="btn banner-btn">explore</a>
       </div>
     </header>
     <!-- end of header -->
     <!-- skills section -->
     <section class="skills clearfix">
-      <!-- single skill -->
+      <!-- single skil -->
       <article class="skill">
         <span class="skill-icon">
           <i class="fas fa-mug-hot"></i>
         </span>
-        <h4 class="skill-title">made in HND</h4>
-        <p class="skill-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
-        </p>
+        <h4 class="skill-title">Quality</h4>
+        <p class="skill-text">Art made of 100% honduran coffee.</p>
       </article>
       <!-- end of single skill -->
       <!-- single skill -->
       <article class="skill">
         <span class="skill-icon">
-          <i class="fas fa-glass-cheers"></i>
+          <i class="fas fa-palette"></i>
         </span>
-        <h4 class="skill-title">relaxation</h4>
-        <p class="skill-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
-        </p>
+        <h4 class="skill-title">Creativity</h4>
+        <p class="skill-text">We turn our customers' ideas into art.</p>
       </article>
-      <!-- end of single skill -->
+      <!-- end of single skil -->
       <!-- single skil -->
       <article class="skill">
         <span class="skill-icon">
-          <i class="fas fa-bomb"></i>
+          <i class="fas fa-money-bill"></i>
         </span>
-        <h4 class="skill-title">energy</h4>
-        <p class="skill-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
-        </p>
+        <h4 class="skill-title">Payment Facility</h4>
+        <p class="skill-text">Diversity of prices and payment facilities.</p>
       </article>
       <!-- end of single skill -->
       <!-- single skill -->
       <article class="skill">
         <span class="skill-icon">
-          <i class="fas fa-mortar-pestle"></i>
+          <i class="fas fa-handshake"></i>
         </span>
-        <h4 class="skill-title">family recipe</h4>
-        <p class="skill-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur.
-        </p>
+        <h4 class="skill-title">Customer Service</h4>
+        <p class="skill-text">We count with a great customer service.</p>
       </article>
       <!-- end of single skill -->
     </section>
@@ -94,24 +86,33 @@
       <div class="section-center">
         <div class="sosial-icons">
           <!-- social icon -->
-          <a href="#" class="social-icon">
+          <a
+            href="https://www.facebook.com/profile.php?id=100095397826292"
+            class="social-icon"
+          >
             <i class="fab fa-facebook"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="#" class="social-icon">
-            <i class="fab fa-twitter"></i>
+          <a
+            href="https://www.linkedin.com/in/angelica-stefanya-reyes/"
+            class="social-icon"
+          >
+            <i class="fab fa-linkedin"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="#" class="social-icon">
+          <a
+            href="https://www.instagram.com/stefanya_reyes_diaz/"
+            class="social-icon"
+          >
             <i class="fab fa-instagram"></i>
           </a>
           <!-- end of icon -->
         </div>
         <h4 class="footer-text">
-          &copy;<span id="date">2023 </span
-          ><span class="company">tea station</span> all rights reserved
+          &copy;<span id="date"></span
+          ><span class="company"> Jae's coffee art</span> all rights reserved
         </h4>
       </div>
     </footer>
