--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <h4 class="skill-title">Quality</h4>
         <p class="skill-text">Art made of 100% honduran coffee.</p>
       </article>
-      <!-- end of single skil -->
-      <!-- single skil -->
+      <!-- end of single skill -->
+      <!-- single skill -->
       <article class="skill">
         <span class="skill-icon">
           <i class="fas fa-palette"></i>
@@ -70,8 +70,8 @@
         <h4 class="skill-title">Payment Facility</h4>
         <p class="skill-text">Diversity of prices and payment facilities.</p>
       </article>
-      <!-- end of single skil -->
-      <!-- single skil -->
+      <!-- end of single skill -->
+      <!-- single skill -->
       <article class="skill">
         <span class="skill-icon">
           <i class="fas fa-handshake"></i>
@@ -79,7 +79,7 @@
         <h4 class="skill-title">Customer Service</h4>
         <p class="skill-text">We count with a great customer service.</p>
       </article>
-      <!-- end of single skil -->
+      <!-- end of single skill -->
     </section>
     <!-- end of skills section -->
     <!-- about  -->
@@ -351,19 +351,25 @@
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="astefanyareyes@gmail.com" class="social-icon">
-            <i class="fas fa-envelope"></i>
+          <a
+            href="https://www.linkedin.com/in/angelica-stefanya-reyes/"
+            class="social-icon"
+          >
+            <i class="fab fa-linkedin"></i>
           </a>
           <!-- end of icon -->
           <!-- social icon -->
-          <a href="#" class="social-icon">
+          <a
+            href="https://www.instagram.com/stefanya_reyes_diaz/"
+            class="social-icon"
+          >
             <i class="fab fa-instagram"></i>
           </a>
           <!-- end of icon -->
         </div>
         <h4 class="footer-text">
-          &copy;<span id="date">2023 </span
-          ><span class="company">Jae's coffee art</span> all rights reserved
+          &copy;<span id="date"></span
+          ><span class="company"> Jae's coffee art</span> all rights reserved
         </h4>
       </div>
     </footer>
